--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Squirrel's laws</title>
   </head>
   <body>
-  
-  </body>
+  <h1>Squirrel's laws</h1>
+  <ul>
+  <li>First: they are beatiful !!</li>
+  <li>Second: they are beatiful !!</li>
+</ul>  
+</body>
 </html>
